add openAPI and edit config
